--- a/dd-web/src/main/resources/env/dev/redis.properties
+++ b/dd-web/src/main/resources/env/dev/redis.properties
@@ -1,6 +1,6 @@
 redis.host=114.55.104.155
 redis.port=6379
-redis.pass=hmx202006
+redis.pass=
 #redis.host=127.0.0.1
 #redis.port=6379
 #redis.pass=
