--- a/dd-web/src/main/resources/env/prd/redis.properties
+++ b/dd-web/src/main/resources/env/prd/redis.properties
@@ -1,13 +1,13 @@
 redis.host=114.55.104.155
 redis.port=6379
-redis.pass=hmx202006
-#控制一个pool最多有多少个状态为idle(空闲)的jedis实例
+redis.pass=
+#锟斤拷锟斤拷一锟斤拷pool锟斤拷锟斤拷卸锟斤拷俑锟阶刺猧dle(锟斤拷锟斤拷)锟斤拷jedis实锟斤拷
 redis.maxIdle=300
 redis.minIdle=10
-#控制一个pool可分配多少个jedis实例
+#锟斤拷锟斤拷一锟斤拷pool锟缴凤拷锟斤拷锟斤拷俑锟絡edis实锟斤拷
 redis.maxTotal=600
-#表示当borrow一个jedis实例时，最大的等待时间，如果超过等待时间，则直接抛出JedisConnectionException
+#锟斤拷示锟斤拷borrow一锟斤拷jedis实锟斤拷时锟斤拷锟斤拷锟侥等达拷时锟戒，锟斤拷锟斤拷锟斤拷锟斤拷却锟绞憋拷洌拷锟街憋拷锟斤拷壮锟絁edisConnectionException
 redis.maxWaitMillis=1000
-#在borrow一个jedis实例时，是否提前进行validate操作；如果为true，则得到的jedis实例均是可用的
+#锟斤拷borrow一锟斤拷jedis实锟斤拷时锟斤拷锟角凤拷锟斤拷前锟斤拷锟斤拷validate锟斤拷锟斤拷锟斤拷锟斤拷锟轿猼rue锟斤拷锟斤拷玫锟斤拷锟絡edis实锟斤拷锟斤拷锟角匡拷锟矫碉拷
 redis.testOnBorrow=true
 redis.database=6
