--- a/dd-web/src/main/resources/env/dev/database.properties
+++ b/dd-web/src/main/resources/env/dev/database.properties
@@ -1,6 +1,9 @@
 #mysql
 
-
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://114.55.104.155:3306/hmx?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+jdbc.username=root
+jdbc.password=hmx202006
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/jh?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 #jdbc.username=root
