--- a/dd-common/src/main/resources/generator/generator.properties
+++ b/dd-common/src/main/resources/generator/generator.properties
@@ -1,6 +1,6 @@
 # mybatis-plus-generator database info
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/zswhdb?useUnicode=true&useSSL=false&characterEncoding=utf8
+url=jdbc:mysql://114.55.104.155:3306/hmxtest?useUnicode=true&useSSL=false&characterEncoding=utf8
 username=root
-password=123456
+password=hmx202006
 
