--- a/dd-task/src/main/resources/env/dev/database.properties
+++ b/dd-task/src/main/resources/env/dev/database.properties
@@ -1,6 +1,6 @@
 #mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.55.104.155:3306/hmxtest?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+jdbc.url=jdbc:mysql://114.55.104.155:3306/hmx?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=hmx202006
 #jdbc.driverClassName=com.mysql.jdbc.Driver
